# django_opensearch

./: .gitignore  README.md  container_remake.sh  directorystructure.md  docker-compose.yml  generate_certs.sh  init-security.sh  initialize_script.sh  related_word.md  search_log.csv  technologystack.md
.claude/: settings.local.json
.cursor/rules/: global.mdc
.github/workflows/: pr_agent.yml
opensearch/: Dockerfile
opensearch/config/: opensearch.yml
opensearch/opensearch-security/: action_groups.yml  config.yml  internal_users.yml  roles.yml  roles_mapping.yml  tenants.yml
web/: Dockerfile  pyproject.toml  search_log.csv
web/blog/: admin.py  forms.py  models.py  urls.py  views.py
web/blog/management/commands/: register_fake_blog_model.py
web/blog/migrations/: 0001_initial.py
web/blog/templates/: blog_list.html
web/config/: settings.py  urls.py
web/search/: admin.py  documents.py  models.py  search_log.py
web/search/management/commands/: clear_search_suggestions.py  create_co_occurrence_transform.py  create_index_transform.py  create_permutation_transform.py  create_scripted_metric_suggestions.py  import_search_log.py  init_index.py  make_backup.py  manage_transform_jobs.py  register_searchlog_to_index.py  restore_backup.py  search.py  search_transformed_index.py  test_co_occurrence_search.py  test_permutation_search.py
web/search/migrations/: 0001_initial.py
